--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -400,12 +400,16 @@ a {text-decoration: none;color:inherit;}
 .input-href {width:100%;padding:10px 0;border-bottom:1px solid green;}
 .input-href input {border:none;}
 
-.stage-content .symbol {}
 .stage { border-radius: 5px;overflow: hidden;}
 #editorText {text-align: center;}
 #editorText .pages {width:190px;margin:20px auto;}
 #editorText .pages .count {display: none}
-.stage-content .symbol {transform: scale(0.5);}
+.stage-content .symbol img ,.stage-content .symbol .pages-txt  {
+    -moz-transform:scale(0.5);
+    -webkit-transform:scale(0.5);
+    -o-transform:scale(0.5);
+}
+
 .stage-content .edit-area {display:inline-block;position: relative;}
 .edit-area .ico-acitve {display: none;background-image: url(../img/icon-edit-pic.png);width:36px;height:36px;position: absolute;;top:10px;right:10px;background-size: 100% 100%;}
 .pages-txt.edit-area {border:1px dashed transparent;border-radius:5px;}
