--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -128,7 +128,7 @@
             <span class="anim-item"><i data-animation="fadeInRight" class="icon-fadeIn-from-right"></i></span>
             <span class="anim-item"><i data-animation="fadeInDown" class="icon-fadeIn-from-top"></i></span>
             <span class="anim-item"><i data-animation="pulse" class="icon-tuxian"></i></span>
-            <span class="anim-item"><i data-animation="wobble"  class="icon-tanru-from-top"></i></span>
+            <!--<span class="anim-item"><i data-animation="wobble"  class="icon-tanru-from-top"></i></span>-->
             <span class="anim-item"><i data-animation="flash"  class="icon-flash"></i></span>
             <span class="anim-item"><i data-animation="bounce"  class="icon-bounce"></i></span>
             <span class="anim-item"><i data-animation="bounceInDown"  class="icon-tanru-from-top"></i></span>
