--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -5,55 +5,64 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <ImageView
-        android:layout_marginTop="24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@mipmap/icon_modify_email"/>
-
-    <TextView
-        android:id="@+id/password_reset_notice_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="20dp"
-        android:gravity="start"
-        android:padding="16dp"
-        android:text="@string/password_reset_email_account_text"
-        android:textColor="@color/app_fourth"
-        android:textSize="@dimen/app_text_size_large"
-        android:textStyle="bold" />
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/password_reset_email_account_text"
-        style="@style/App.TextStyle.Secondary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|top"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:singleLine="false"
-        android:text="@string/change_main_text"
-        android:layout_weight="0.05" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:background="@mipmap/icon_modify_email" />
+
+        <TextView
+            android:id="@+id/password_reset_notice_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="20dp"
+            android:gravity="start"
+            android:padding="16dp"
+            android:text="@string/password_reset_email_account_text"
+            android:textColor="@color/app_fourth"
+            android:textSize="@dimen/app_text_size_large"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/password_reset_email_account_text"
+            style="@style/App.TextStyle.Secondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.05"
+            android:gravity="center|top"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:singleLine="false"
+            android:text="@string/change_main_text" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_change_email_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:background="@drawable/password_reset_btn_bg"
         android:text="@string/btn_change_email_address"
-        android:layout_marginTop="12dp"
         android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btn_logout_email_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/btn_logout_email_account_selector"
         android:text="@string/btn_logout_email_account"
         android:textAllCaps="false"
-        android:textColor="@color/app_fourth"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="12dp"/>
+        android:textColor="@color/app_fourth" />
 
 </LinearLayout>
