--- a/app/src/main/res/layout/activity_change_email_detail.xml
+++ b/app/src/main/res/layout/activity_change_email_detail.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
+
     <ImageView
         android:layout_marginTop="24dp"
         android:layout_width="wrap_content"
@@ -25,6 +32,8 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:textColor="@android:color/darker_gray"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/password_reset_email_account_text"
