--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -12,7 +12,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:alpha="1">
 
         <ImageView
@@ -100,7 +101,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Made with love"
         android:textColor="#2d3437"
         android:textSize="24sp" />
 
