--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -1,62 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/password_reset_notice_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/password_reset_email_account_text"
-        android:layout_marginBottom="120dp"
-        android:drawablePadding="20dp"
-        android:drawableTop="@mipmap/icon_password_reset_lock"
-        android:gravity="center"
-        android:text="@string/password_reset_notice_text"
-        android:lineSpacingMultiplier="1.4"
-        android:textColor="@android:color/darker_gray"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/password_reset_notice_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="120dp"
+            android:layout_marginTop="24dp"
+            android:drawablePadding="20dp"
+            android:drawableTop="@mipmap/icon_password_reset_lock"
+            android:gravity="center"
+            android:lineSpacingMultiplier="1.4"
+            android:text="@string/password_reset_notice_text"
+            android:textColor="@android:color/darker_gray" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/password_reset_email_account_text"
+        style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/password_reset_email_edit"
         android:layout_marginEnd="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginStart="5dp"
-        android:text="@string/password_reset_email_account_text"
-        style="@style/App.TextStyle.Secondary"/>
+        android:text="@string/password_reset_email_account_text" />
+
 
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/password_reset_email_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/password_reset_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:inputType="text"
         app:action="@drawable/icon_edit_clear_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
+        app:edit_textStyle="@style/App.TextStyle.Edit"
         app:show_error="true"
         app:warning_height="24dp"
         app:warning_icon="@drawable/icon_warning"
         app:warning_icon_paddingEnd="9dp"
-        app:warning_textStyle="@style/SignUp.Warning"
-        app:edit_textStyle="@style/App.TextStyle.Edit"/>
+        app:warning_textStyle="@style/SignUp.Warning" />
 
     <Button
         android:id="@+id/password_reset_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:background="@drawable/password_reset_btn_bg"
         android:text="@string/password_reset"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false" />
 
-</RelativeLayout>
+</LinearLayout>
