--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -1,21 +1,11 @@
-@font-face {
-    font-family: 'Helvetica';
-    src: url('fonts/Helvetica/Helvetica.eot');
-    src: url('fonts/Helvetica/Helvetica.eot?#iefix') format('embedded-opentype'),
-    url('fonts/Helvetica/Helvetica.svg') format('svg'),
-    url('fonts/Helvetica/Helvetica.ttf') format('truetype'),
-    url('fonts/Helvetica/Helvetica.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
 body{
-    font-family: Helvetica;
+    font-family: "arial";
 }
-/** {*/
+* {
 
-    /*-webkit-tap-highlight-color: transparent;*/
-    /*-webkit-appearance: none;*/
-/*}*/
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: none;
+}
 *:focus {outline: none;}
 a {text-decoration: none;color:inherit;}
 .text-black{
@@ -213,6 +203,18 @@ a {text-decoration: none;color:inherit;}
 .icon-rotation.active {
     background-image: url(../img/icon-rotate-active.png);
 }
+.icon-font-add {
+    background-image: url(../img/add-font.png);
+}
+.icon-font-add.disable {
+    background-image: url(../img/add-font-disable.png);
+}
+.icon-font-reduce {
+    background-image: url(../img/reduce-font.png);
+}
+.icon-font-reduce.disable {
+    background-image: url(../img/reduce-font-disable.png);
+}
 .header{
     height: 48px;line-height: 48px;
 }
@@ -263,7 +265,7 @@ a {text-decoration: none;color:inherit;}
 .tpl-page-cat .bd {padding:15px 0;height:140px;width:100%;position:relative;overflow: hidden; }
 .tpl-page-cat .bd ul {position: absolute; z-index: 1;}
 .tpl-page-item {width:70px;height:110px;float:left;position: relative;margin-left:15px;}
-.tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:block;width:18px;height:28px;position: absolute;left:0;top:0;}
+.tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
 .tpl-page-item .stage-thumb {width:70px;height:110px;}
 .tpl-page-item-name {font-size:14px;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:5px 0;text-align: center;position: absolute;bottom:0;width:70px;left:0;}
 .tpl-page-item .icon-download {display:block;width:20px;height:20px;position: absolute;bottom:35px;right:5px;}
@@ -298,18 +300,19 @@ a {text-decoration: none;color:inherit;}
 
 /*editor-text*/
 .pop-active {padding-bottom:150px;}
+.font-resize span.opt-right span {width:45px;height:30px;}
 .pop-editer-opt,.pop-editer-font,.pop-editer-color,.pop-editer-animation  {position: fixed;bottom:0;left:0;width:100%;background:#fff;text-align: left;}
 .pop-editer-opt .hd,.pop-editer-font .hd,.pop-editer-color .hd,.pop-editer-animation .hd  {height:48px;background:#f2f2f2;border-top:1px solid #d5d6d7;border-bottom:1px solid #d5d6d7;line-height: 48px;}
 .pop-editer-opt .hd i,.pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {float:left;width:25%;height:48px;background-size: auto 30%;}
-.pop-editer-opt .opt-name  {color:#2d3437;font-size:14px;}
-.pop-editer-opt .bd,.pop-editer-font .bd,.pop-editer-color .bd,.pop-editer-animation .bd {background:#fff;height:110px;}
-.pop-editer-opt .item {border-bottom:1px solid #d5d6d7;padding:10px;}
+.pop-editer-opt .opt-name  {color:#2d3437;font-size:14px;line-height:30px;}
+.pop-editer-opt .bd,.pop-editer-font .bd,.pop-editer-color .bd,.pop-editer-animation .bd {background:#fff;height:164px;overflow: scroll;width:100%;}
+.pop-editer-opt .item {border-bottom:1px solid #d5d6d7;padding:10px;overflow: hidden}
 .pop-editer-opt .item:last-child {border:none;}
-.pop-editer-opt .opt-right,.pop-editer-font .opt-right {float:right;color:#19c702;}
-.pop-editer-opt .opt-right i.icon-arrow-right-list {width:10px;height:15px;background-size: auto 100%;margin-left:5px;vertical-align: 3px;}
+.pop-editer-opt .opt-right,.pop-editer-font .opt-right {float:right;color:#19c702;line-height: 30px;}
+.pop-editer-opt .opt-right i.icon-arrow-right-list {width:10px;height:25px;background-size: auto 80%;margin-left:5px;vertical-align:middle;}
 .pop-editer-opt .opt-val {float:left;}
-.pop-editer-opt .opt-color-val {background:#fff;border:1px solid #ddd;width:20px;height:20px;display:inline-block;border-radius: 20px;}
-.pop-editer-opt .opt-animation-val i {display: inline-block;width:20px;height:20px;background-size: 100% 100%;border-radius: 20px;border:1px solid #52b502;}
+.pop-editer-opt .opt-color-val {background:#fff;border:1px solid #ddd;width:25px;height:25px;display:inline-block;border-radius: 20px;float:left;}
+.pop-editer-opt .opt-animation-val i {float:left;display: inline-block;width:25px;height:25px;background-size: 100% 100%;border-radius: 20px;border:1px solid #52b502;}
 
 .pop-editer-font .tit,.pop-editer-color .tit,.pop-editer-animation .tit {vertical-align: top; font-size: 18px; color: #2d3437; margin-left: 10px;}
 .pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {width:48px;}
@@ -323,16 +326,14 @@ a {text-decoration: none;color:inherit;}
 .pop-editer-font .item.selected .icon-correct {display: inline-block!important;}
 .pop-editer-font .opt-name {float:left;display: inline-block;}
 .pop-editer-font .opt-right {}
-.pop-editer-color .bd {padding:10px;}
+.pop-editer-color .bd {padding:20px;}
 .color-main, .color-sub {width: 100%;overflow: hidden}
-.color-main .color-main-item {float:left;width:10%;height:20px;background:red;}
-.color-sub {margin-top:10px;}
-.color-sub .color-sub-item {float:left;width:25%;height:30px;background:red;position: relative;text-align:center;}
+.color-main .color-main-item {float:left;width:10%;height:30px;background:red;}
+.color-sub {margin-top:15px;}
+.color-sub .color-sub-item {float:left;width:25%;height:35px;background:red;position: relative;text-align:center;}
 .color-sub .color-sub-item i{
-    display: none;
     width:30px;height:30px;
     vertical-align: middle;
-    display: block;
     display: none;
     background-repeat: no-repeat;
     background-position: center center;
@@ -341,9 +342,9 @@ a {text-decoration: none;color:inherit;}
 }
 .color-sub .color-sub-item.selected i {display: inline-block}
 
-.pop-editer-animation .bd {overflow: scroll;width:100%;}
+.pop-editer-animation .bd {overflow: scroll;width:100%;padding:15px 0;}
 .pop-editer-animation .anim-item {width:20%;display: inline-block;float:left;text-align: center;margin:5px 0;}
-.pop-editer-animation .anim-item i {display: inline-block;width:30px;height:30px;background-size: 100% 100%;border-radius: 30px;border:1px solid #ddd;}
+.pop-editer-animation .anim-item i {display: inline-block;width:35px;height:35px;background-size: 100% 100%;border-radius: 30px;border:1px solid #ddd;}
 .pop-editer-animation .anim-item i.active {border-color:#52b502;}
 .pop-editer-animation .anim-item .anim-name {padding:5px 0;display: block;}
 .icon-add-stage {width:60px;height:60px;position: fixed;bottom:20px;right:20px;z-index: 9999;}
@@ -351,7 +352,7 @@ a {text-decoration: none;color:inherit;}
 .ui-dialog{
     overflow: hidden;
     margin: 0 auto;
-    z-index: 1002;
+    z-index: 10002;
     position:absolute;
     left: 0;
     top: -10000px;
@@ -370,7 +371,7 @@ a {text-decoration: none;color:inherit;}
     background: #888;
     opacity: 0.5;
     display: none;
-    z-index: 1001;
+    z-index: 10001;
     -webkit-transform: translateZ(0);
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     -webkit-user-select: none;
@@ -405,19 +406,20 @@ a {text-decoration: none;color:inherit;}
 #editorText .pages {width:190px;margin:20px auto;}
 #editorText .pages .count {display: none}
 .stage-content .symbol img ,.stage-content .symbol .pages-txt  {
-    -moz-transform:scale(0.5);
-    -webkit-transform:scale(0.5);
-    -o-transform:scale(0.5);
+    -moz-transform:scale(0.7);
+    -webkit-transform:scale(0.7);
+    -o-transform:scale(0.7);
+    -webkit-transform-origin: 50% 0%;
 }
 
 .stage-content .edit-area {display:inline-block;position: relative;}
 .edit-area .ico-acitve {display: none;background-image: url(../img/icon-edit-pic.png);width:36px;height:36px;position: absolute;;top:10px;right:10px;background-size: 100% 100%;}
-.pages-txt.edit-area {border:1px dashed transparent;border-radius:5px;}
+.pages-txt.edit-area {border:1px solid transparent;border-radius:5px;}
 .pages-txt.edit-area.active {border-color:#ffe400;}
 .edit-area.active>.ico-acitve {display: block;}
 
-.drag-handle {display:block;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0}
-li.dragable .drag-handle {display: block;}
+.drag-handle {display:none;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0}
+li.selected .drag-handle {display: block;}
 .story-page-list .symbol {visibility: hidden;}
 .story-page-list .count {display: none}
 
