--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -39,12 +39,15 @@
     <div class="pages" id="pages-scroll" >
         <ul>
             <li class="active">
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;">
-                    <div class="symbol"  style="display:inline-block;">
-                        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50" src="img/icon-earth.png"/></div>
+                <div class="count">1/2</div>
+                <div class="stage-content edit-area pages-img pages-img-bg" style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                    <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+                        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                              src="img/icon-earth.png"/></div>
                     </div>
-                    <div class="symbol" style="z-index: 3;">
-                        <div class="pages-txt edit-area" data-animation="animated slideInUp" style="word-break: break-word;margin:20% 10% 0 10%;width:80%;color:#fff;text-align: center;font-size:20px;">asdfasion of network technology and language essenceasdfaAs c update of the classictranslation corpus, the combination of network technology and language essencAs c update of the classictranslation cor
+                    <div class="symbol" style="z-index: 3;vertical-align:middle;">
+                        <div class="pages-txt edit-area" data-animation="animated slideInUp"
+                             style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c update of the classictranslation corpus, the combination of
                         </div>
                     </div>
                 </div>
