--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -1,31 +1,111 @@
-<style type="text/css">
-    #container{
+<div class="stage-content edit-area pages-img pages-img-bg"
+     style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                              src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+        </div>
+    </div>
+    <div class="symbol" style="z-index: 3;vertical-align:middle;">
+        <div class="pages-txt edit-area" data-animation="animated slideInUp"
+             style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c update of
+            the classictranslation corpus, the combination of
+        </div>
+    </div>
+</div>,
+<div class="stage-content edit-area pages-img pages-img-bg"
+     style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                              src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+        </div>
+    </div>
+    <div class="symbol" style="z-index: 3;vertical-align:middle;">
+        <div class="pages-txt edit-area" data-animation="animated slideInUp"
+             style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c update of
+            the classictranslation corpus, the combination of
+        </div>
+    </div>
+</div>,
+<div class="stage-content edit-area pages-img pages-img-bg"
+style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                              src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+        </div>
+    </div>
+    <div class="symbol" style="z-index: 3;vertical-align:middle;">
+        <div class="pages-txt edit-area" data-animation="animated slideInUp"
+             style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c update of
+            the classictranslation corpus, the combination of
+        </div>
+    </div>
+</div>,
+<div class="stage-content edit-area pages-img pages-img-bg"
+     style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+        <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                              src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+        </div>
+    </div>
+    <div class="symbol" style="z-index: 3;vertical-align:middle;">
+        <di
+                10-09 14:27:16.076 12254-12254
+        /? I/Web Console﹕
 
-        width:800px;
-        height: 200px;
-        border: 1px solid #ccc;
-        display: box;
-        display: -webkit-box;
-        display: -moz-box;
-        -webkit-box-pack:center;
-        -moz-box-pack:center;
-        -webkit-box-align:center;
-        -moz-box-align:center;
-    }
-    #div1{
-        background: orange;
-    }
-    #div2{
-        background: yellow;
-    }
-    #div3{
-        background: green;
-    }
-</style>
-</head>
-<body>
-<div id="container">
-    <div id="div1">列1</div>
-    <div id="div2">列2</div>
-    <div id="div3">列3</div>
-</div> 
+
+        <div class="stage-content edit-area pages-img pages-img-bg"
+             style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+            <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+                <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                      src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;vertical-align:middle;">
+                <div class="pages-txt edit-area" data-animation="animated slideInUp"
+                     style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c
+                    update of the classictranslation corpus, the combination of
+                </div>
+            </div>
+        </div>
+        ,
+        <div class="stage-content edit-area pages-img pages-img-bg"
+             style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+            <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+                <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                      src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;vertical-align:middle;">
+                <div class="pages-txt edit-area" data-animation="animated slideInUp"
+                     style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c
+                    update of the classictranslation corpus, the combination of
+                </div>
+            </div>
+        </div>
+        ,
+        <div class="stage-content edit-area pages-img pages-img-bg"
+             style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+            <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+                <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                      src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;vertical-align:middle;">
+                <div class="pages-txt edit-area" data-animation="animated slideInUp"
+                     style="width:80%;color:#fff;font-size:22px;text-align:center;color:red;">asdfasdasfadsfasdf As c
+                    update of the classictranslation corpus, the combination of
+                </div>
+            </div>
+        </div>
+        ,
+        <div class="stage-content edit-area pages-img pages-img-bg"
+             style=" display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+            <div class="symbol" style="display:inline-block;position:absolute;left:10px;top:10px;">
+                <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                      src="/mnt/sdcard/wisape/com.wisape.android/data/story/20151008101633/img/icon-earth.png">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;vertical-align:middle;">
+                <di
+                        10-09 14:27:21.261 12254-12254
+                /? I/Web Console﹕
