--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -287,6 +287,7 @@ a {text-decoration: none;color:inherit;}
     position: absolute;
     bottom:-5px;
     right:-5px;
+    z-index: 999;
 }
 .story-page-list .selected  .icon-correct {display: block}
 .story-page-list .tpl-page-item {
