--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,6 +30,17 @@
         android:layout_marginTop="64dp"/>
 
     <TextView
+        android:id="@+id/text_content"
+        style="@style/App.TextStyle.Secondary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/menu_item_background_selector"
+        android:textColor="@color/app_about_text_color"
+        android:text="@string/about_content"
+        android:layout_marginTop="64dp"/>
+
+    <TextView
         android:id="@+id/text_rate"
         style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
