--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -28,6 +28,10 @@
         <param name="android-package" value="com.wisape.android.cordova.FileUtils"/>
     </feature>
 
+    <feature name="Logger">
+        <param name="android-package" value="com.wisape.android.cordova.LoggerPlugin" />
+    </feature>
+
     <feature name="Test">
         <param name="android-package" value="com.wisape.android.cordova.TestPlugin" /><!-- value:包名.类名 -->
     </feature>
