--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -16,10 +16,19 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="keyboard"
+        android:id="@+id/softkeyboard"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="13dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="QR Code"
         android:id="@+id/qr_code"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/softkeyboard"
         android:layout_marginTop="13dp" />
 
     <Button
@@ -57,6 +66,8 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/create_story"
         android:layout_marginTop="13dp" />
+
+
     <!--
     <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="300dp"
