修改第三方分享

--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -15,12 +15,11 @@
             android:id="@+id/password_reset_notice_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="120dp"
             android:layout_marginTop="24dp"
             android:drawablePadding="20dp"
             android:drawableTop="@mipmap/icon_password_reset_lock"
             android:gravity="center"
-            android:lineSpacingMultiplier="1.4"
+            android:singleLine="false"
             android:text="@string/password_reset_notice_text"
             android:textColor="@android:color/darker_gray" />
     </LinearLayout>
